<resources>
    <string name="app_name">Project10</string>

    <!--   Bottom Navigation-->
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!--    Home Fragment-->
    <string name="ready_to_start_learning">Ready to start learning?</string>
    <string name="sign_in">Sign in</string>
    <string name="project_10">Project 10</string>

    <!--    Explore Fragment-->
    <string name="featured_creators">Featured Creators</string>


    <!--    YoutubeFailureRecoveryActivity-->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!--    signup_fragment.xml-->
    <string name="join_us">Join Project 10. Always be learning!</string>
    <string name="sync">Your progress will be in sync no matter which phone you\'re using.</string>
    <string name="email_signup">Sign up with email</string>
    <string name="signin">Sign in</string>
    <string name="ask_user">Already a user?</string>

    <!--    Google Signin-->
    <string name="google_signup">Continue with Google</string>

    <!--    Profile Fragment-->
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="sign_out">Sign Out</string>

    <!--    Bookmarks Fragment-->
    <string name="empty_bookmarks">You have no bookmarks</string>


</resources>